replaceChildren() (with no arguments) silently does nothing rather than removing the children https://bugs.webkit.org/show_bug.cgi?id=217537

Reviewed by Sam Weinig.

LayoutTests/imported/w3c:

* web-platform-tests/dom/nodes/ParentNode-replaceChildren-expected.txt:
* web-platform-tests/dom/nodes/ParentNode-replaceChildren.html:
Added a test of replaceChildren without any argument, on a parent having a child.

Source/WebCore:

* dom/ContainerNode.cpp:
(WebCore::ContainerNode::replaceChildren): Removed incorrect early return when the
node is null, instead added some null checks around the parts of the algorithm that
should be skipped in that case.

Canonical link: https://commits.webkit.org/230337@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268314 268f45cc-cd09-0410-ab3c-d52691b4dbfc